--- a/index.html
+++ b/index.html
@@ -1,59 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dist/app.css">
 
 </head>
+
 <body>
   <!-- HEADER -->
-<header>
-<img src="img/logo-img-01.png" alt="">
-<ul>
-  <li><a href="#">Prova</a></li>
-  <li><a href="#">Prova</a></li>
-  <li><a href="#">Prova</a></li>
-  <li><a href="#">Prova</a></li>
-  <li><a href="#">Prova</a></li>
-  <li><a href="#">Prova</a></li>
-  <li><a href="#">Prova</a></li>
-</ul>
-</header>
+  <header>
+    <img src="images/logo-img-01.png" alt="">
+    <ul>
+      <li><a href="#">Prova</a></li>
+      <li><a href="#">Prova</a></li>
+      <li><a href="#">Prova</a></li>
+      <li><a href="#">Prova</a></li>
+      <li><a href="#">Prova</a></li>
+      <li><a href="#">Prova</a></li>
+      <li><a href="#">Prova</a></li>
+    </ul>
+  </header>
   <!-- /HEADER -->
 
   <!-- MAIN   -->
-<main>
-  <section class="company-info">
-<div class="title-area">
-  <h2>We are Bryson,New <br> York-based art &amp; design studio</h2>
+  <main>
+    <section class="company-info">
+      <div class="title-area">
+        <h2>We are Bryson,New <br> York-based art &amp; design studio</h2>
 
-</div>
-<div class="info-area">
-  <p>Here at Bryson it only takes a smidgen of imagination and we've already prepared ourselves for future challenges. Take a peek and see if you recognize the trademark ingredients of our work.</p>
+      </div>
+      <div class="info-area">
+        <p>Here at Bryson it only takes a smidgen of imagination and we've already prepared ourselves for future challenges. Take a peek and see if you recognize the trademark ingredients of our work.</p>
 
-</div>
-  </section>
-  <div class="pictures">
-    <img src="img/port-img-07.jpg" alt="">
-    <img src="img/port-img-08.jpg" alt="">
-    <img src="img/port-img-09.jpg" alt="">
-    <img src="img/port-img-10.jpg" alt="">
-    <img src="img/port-img-11.jpg" alt="">
-    <img src="img/port-img-12.jpg" alt="">
-  </div>
-</main>
+      </div>
+    </section>
+    <div class="pictures">
+      <img src="images/port-img-07.jpg" alt="">
+      <img src="images/port-img-08.jpg" alt="">
+      <img src="images/port-img-09.jpg" alt="">
+      <img src="images/port-img-10.jpg" alt="">
+      <img src="images/port-img-11.jpg" alt="">
+      <img src="images/port-img-12.jpg" alt="">
+    </div>
+    <div class="options">
+      <div class="options-left">
+        <h3>What we do</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <button type="button" name="button">Read more</button>
+      </div>
+      <div class="options-right">
+        <div class="services">
+          <img src="images\h2-icon-01.png" alt="">
+
+        </div>
+        <div class="services">
+          <img src="images\h2-icon-02.png" alt="">
+
+        </div>
+        <div class="services">
+          <img src="images\h2-icon-03.png" alt="">
+
+        </div>
+        <div class="services">
+          <img src="images\h2-icon-04.png" alt="">
+
+        </div>
+
+      </div>
+    </div>
+  </main>
   <!-- /MAIN   -->
 
   <!-- FOOTER -->
 
   <!-- /FOOTER -->
 
-<h1></h1>
+  <h1></h1>
 </body>
+
+</html></body>
+
 </html>
