--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <!-- MAIN   -->
   <main>
+    <div class="wrapper">
     <section class="company-info">
       <div class="title-area">
         <h2>We are Bryson,New <br> York-based art &amp; design studio</h2>
@@ -50,31 +51,35 @@
       <img src="images/port-img-12.jpg" alt="">
     </div>
     <div class="options">
-      <div class="options-left">
+      <div class="opt-left">
         <h3>What we do</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         <button type="button" name="button">Read more</button>
+
       </div>
-      <div class="options-right">
-        <div class="services">
-          <img src="images\h2-icon-01.png" alt="">
-
+      <div class="opt-right">
+        <div class="opt-right-1">
+          <img src="images/h2-icon-01.png" alt="">
+          <h4>Beautiful illustrations</h4>
         </div>
-        <div class="services">
-          <img src="images\h2-icon-02.png" alt="">
-
+        <div class="opt-right-2">
+          <img src="images/h2-icon-02.png" alt="">
+          <h4>Brand strategies</h4>
         </div>
-        <div class="services">
-          <img src="images\h2-icon-03.png" alt="">
-
+        <div class="opt-right-3">
+          <img src="images/h2-icon-03.png" alt="">
+          <h4>Qualified support</h4>
         </div>
-        <div class="services">
-          <img src="images\h2-icon-04.png" alt="">
-
+        <div class="opt-right-4">
+          <img src="images/h2-icon-04.png" alt="">
+          <h4>Books and magazines</h4>
         </div>
-
       </div>
     </div>
+</div>
+<div class="wallpaper">
+<img src="images/main-home-video-button-img-01.png" alt="">
+</div>
   </main>
   <!-- /MAIN   -->
 
