--- a/index.html
+++ b/index.html
@@ -80,11 +80,66 @@
 <div class="wallpaper">
 <img src="images/main-home-video-button-img-01.png" alt="">
 </div>
+<div class="plans">
+  <div class="plan-1">
+    <h4>Basic</h4>
+    <h2>99 <sup>$</sup></h2>
+    <ul>
+      <li>15 Design concepts</li>
+      <li>Full copyright ownership</li>
+      <li>Art direction</li>
+      <li>Top level creatives</li>
+      <li>No money back</li>
+    </ul>
+
+  </div>
+  <div class="plan-2">
+    <h4>Standard</h4>
+    <h2>119 <sup>$</sup></h2>
+    <ul>
+      <li>15 Design concepts</li>
+      <li>Full copyright ownership</li>
+      <li>Art direction</li>
+      <li>Top level creatives</li>
+      <li>No money back</li>
+    </ul>
+  </div>
+<div class="plan-3">
+  <h4>Basic</h4>
+  <h2>99 <sup>$</sup> </h2>
+  <ul>
+    <li>15 Design concepts</li>
+    <li>Full copyright ownership</li>
+    <li>Art direction</li>
+    <li>Top level creatives</li>
+    <li>No money back</li>
+  </ul>
+</div>
+</div>
   </main>
   <!-- /MAIN   -->
 
   <!-- FOOTER -->
+<footer>
+  <section class="input-form">
+    <div class="f-left">
+      <h2>Get in touch <br> and say Hello</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <div class="f-right">
+      <form class="" action="index.html" method="post">
 
+<input id="" type="text" name="" value="" placeholder="Comment">
+<input id="" type="text" name="" value="" placeholder="Name">
+<input id="" type="text" name="" value="" placeholder="Email">
+
+      </form>
+      <button type="button" name="button">Submit</button>
+
+    </div>
+
+  </section>
+</footer>
   <!-- /FOOTER -->
 
   <h1></h1>
