css raw complete

--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
     </div>
 
   </section>
+  <section class="socials-wrapper">
+    <div class="socials">
+      <h3>Bryson</h3>
+      <p>Sometimes doing something seemingly demanding turns out to be fun.
+        Here's the proof - Bryson, your brand new portfolio. </p>
+      </div>
+
+  </section>
 </footer>
   <!-- /FOOTER -->
 
