--- a/index.html
+++ b/index.html
@@ -42,16 +42,20 @@
     <section class="pictures">
       <div class="frame">
         <img src="images/port-img-07.jpg" alt="">
-        <img src="images/port-img-08.jpg" alt="">
+        <img class="active" src="images/port-img-08.jpg" alt="">
         <img src="images/port-img-09.jpg" alt="">
         <img src="images/port-img-10.jpg" alt="">
         <img src="images/port-img-11.jpg" alt="">
         <img src="images/port-img-12.jpg" alt="">
-        <!-- <div class="pic-react">
+        <div class="pic-react">
 <div class="arrow">
+  <div class="arrow-text">
+    <span id="book">Book illustrations</span>
+    <span id="free">Free design</span>
 
+  </div>
 </div>
-      </div> -->
+      </div>
 
       </div>
     </section>
