--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="images/logo-img-01.png" alt="">
     <ul id="app">
       <li v-for="item in navBar"><a href="#">{{item.element}}</a></li>
-      <!-- <img src="images/svg-1.svg" alt=""> -->
+      <img src="images/svg-1.svg" alt="">
 
     </ul>
   </header>
@@ -29,154 +29,155 @@
   <!-- MAIN   -->
   <main>
     <div class="wrapper">
-    <section class="company-info">
-      <div class="title-area">
-        <h2>We are Bryson,New <br> York-based art &amp; design studio</h2>
+      <section class="company-info">
+        <div class="title-area">
+          <h2>We are Bryson,New <br> York-based art &amp; design studio</h2>
 
-      </div>
-      <div class="info-area">
-        <p class="line-air">Here at Bryson it only takes a smidgen of imagination and we've already prepared ourselves for future challenges. Take a peek and see if you recognize the trademark ingredients of our work.</p>
-
-      </div>
-    </section>
-    <section class="pictures">
-      <div class="frame">
-        <img src="images/port-img-07.jpg" alt="">
-        <img class="active" src="images/port-img-08.jpg" alt="">
-        <img src="images/port-img-09.jpg" alt="">
-        <img src="images/port-img-10.jpg" alt="">
-        <img src="images/port-img-11.jpg" alt="">
-        <img src="images/port-img-12.jpg" alt="">
-        <div class="pic-react">
-<div class="arrow">
-  <div class="arrow-text">
-    <span id="book">Book illustrations</span>
-    <span id="free">Free design</span>
-
-  </div>
-</div>
-      </div>
-
-      </div>
-    </section>
-    <div class="options">
-      <div class="opt-left">
-        <h3>What we do</h3>
-        <p class="line-air">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <button type="button" name="button">Read more</button>
-
-      </div>
-      <div class="opt-right">
-        <div class="opt-right-1">
-          <img src="images/h2-icon-01.png" alt="">
-          <h4>Beautiful illustrations</h4>
         </div>
-        <div class="opt-right-2">
-          <img src="images/h2-icon-02.png" alt="">
-          <h4>Brand strategies</h4>
+        <div class="info-area">
+          <p class="line-air">Here at Bryson it only takes a smidgen of imagination and we've already prepared ourselves for future challenges. Take a peek and see if you recognize the trademark ingredients of our work.</p>
+
         </div>
-        <div class="opt-right-3">
-          <img src="images/h2-icon-03.png" alt="">
-          <h4>Qualified support</h4>
+      </section>
+      <section class="pictures">
+        <div class="frame">
+          <img src="images/port-img-07.jpg" alt="">
+          <img class="active" src="images/port-img-08.jpg" alt="">
+          <img src="images/port-img-09.jpg" alt="">
+          <img src="images/port-img-10.jpg" alt="">
+          <img src="images/port-img-11.jpg" alt="">
+          <img src="images/port-img-12.jpg" alt="">
+          <div class="pic-react">
+            <div class="arrow">
+              <div class="arrow-text">
+                <span id="book">Book illustrations</span>
+                <span id="free">Free design</span>
+
+              </div>
+            </div>
+          </div>
+
         </div>
-        <div class="opt-right-4">
-          <img src="images/h2-icon-04.png" alt="">
-          <h4>Books and magazines</h4>
+      </section>
+      <div class="options">
+        <div class="opt-left">
+          <h3>What we do</h3>
+          <p class="line-air">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+          <button type="button" name="button">Read more</button>
+
+        </div>
+        <div class="opt-right">
+          <div class="opt-right-1">
+            <img src="images/h2-icon-01.png" alt="">
+            <h4>Beautiful illustrations</h4>
+          </div>
+          <div class="opt-right-2">
+            <img src="images/h2-icon-02.png" alt="">
+            <h4>Brand strategies</h4>
+          </div>
+          <div class="opt-right-3">
+            <img src="images/h2-icon-03.png" alt="">
+            <h4>Qualified support</h4>
+          </div>
+          <div class="opt-right-4">
+            <img src="images/h2-icon-04.png" alt="">
+            <h4>Books and magazines</h4>
+          </div>
         </div>
       </div>
     </div>
-</div>
-<div class="wallpaper">
-<img src="images/main-home-video-button-img-01.png" alt="">
-</div>
-<div class="plans">
-  <div class="plan-1">
-    <h4>Basic</h4>
-    <h2>99 <sup>$</sup></h2>
-    <ul>
-      <li>15 Design concepts</li>
-      <li>Full copyright ownership</li>
-      <li>Art direction</li>
-      <li>Top level creatives</li>
-      <li>No money back</li>
-    </ul>
-    <button type="button" name="button">Learn more</button>
+    <div class="wallpaper">
+      <img src="images/main-home-video-button-img-01.png" alt="">
+    </div>
+    <div class="plans">
+      <div class="plan-1">
+        <h4>Basic</h4>
+        <h2>99 <sup>$</sup></h2>
+        <ul>
+          <li>15 Design concepts</li>
+          <li>Full copyright ownership</li>
+          <li>Art direction</li>
+          <li>Top level creatives</li>
+          <li>No money back</li>
+        </ul>
+        <button type="button" name="button">Learn more</button>
 
-  </div>
-  <div class="plan-2">
-    <h4>Standard</h4>
-    <h2>119 <sup>$</sup></h2>
-    <ul>
-      <li>15 Design concepts</li>
-      <li>Full copyright ownership</li>
-      <li>Art direction</li>
-      <li>Top level creatives</li>
-      <li>No money back</li>
-    </ul>
-    <button type="button" name="button">Learn more</button>
-  </div>
-<div class="plan-3">
-  <h4>Basic</h4>
-  <h2>99 <sup>$</sup> </h2>
-  <ul>
-    <li>15 Design concepts</li>
-    <li>Full copyright ownership</li>
-    <li>Art direction</li>
-    <li>Top level creatives</li>
-    <li>No money back</li>
-  </ul>
-  <button type="button" name="button">Learn more</button>
-</div>
-</div>
+      </div>
+      <div class="plan-2">
+        <h4>Standard</h4>
+        <h2>119 <sup>$</sup></h2>
+        <ul>
+          <li>15 Design concepts</li>
+          <li>Full copyright ownership</li>
+          <li>Art direction</li>
+          <li>Top level creatives</li>
+          <li>No money back</li>
+        </ul>
+        <button type="button" name="button">Learn more</button>
+      </div>
+      <div class="plan-3">
+        <h4>Basic</h4>
+        <h2>99 <sup>$</sup> </h2>
+        <ul>
+          <li>15 Design concepts</li>
+          <li>Full copyright ownership</li>
+          <li>Art direction</li>
+          <li>Top level creatives</li>
+          <li>No money back</li>
+        </ul>
+        <button type="button" name="button">Learn more</button>
+      </div>
+    </div>
   </main>
   <!-- /MAIN   -->
 
   <!-- FOOTER -->
-<footer>
-  <section class="input-form">
-    <div class="f-left">
-      <h2>Get in touch <br> and say Hello</h2>
-      <p class="line-air">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="f-right">
-      <form class="" action="index.html" method="post">
+  <footer>
+    <section class="input-form">
+      <div class="f-left">
+        <h2>Get in touch <br> and say Hello</h2>
+        <p class="line-air">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </div>
+      <div class="f-right">
+        <form class="" action="index.html" method="post">
 
-<input id="" type="text" name="" value="" placeholder="Comment">
-<input id="" type="text" name="" value="" placeholder="Name">
-<input id="" type="text" name="" value="" placeholder="Email">
+          <input id="" type="text" name="" value="" placeholder="Comment">
+          <input id="" type="text" name="" value="" placeholder="Name">
+          <input id="" type="text" name="" value="" placeholder="Email">
 
-      </form>
-      <button type="button" name="button">Submit</button>
+        </form>
+        <button type="button" name="button">Submit</button>
 
-    </div>
+      </div>
 
-  </section>
-  <section class="socials-wrapper">
-    <div class="socials">
-      <h3>Bryson</h3>
-      <p class="line-air">Sometimes doing something seemingly demanding turns out to be fun.
-        Here's the proof - Bryson, your brand new portfolio. </p>
+    </section>
+    <section class="socials-wrapper">
+      <div class="socials">
+        <h3>Bryson</h3>
+        <p class="line-air">Sometimes doing something seemingly demanding turns out to be fun. <br>
+          Here's the proof - Bryson, your brand new portfolio. </p>
 
         <div id="app2">
           <div class="icon-cont" v-for="i in social_icons">
 
 
 
-          <!-- <i class="fab fa-instagram-square" v-if ="i.social == 'ig'" ></i> -->
-          <!-- <i v-else-if="social_icons.social =='fb'" class="fab fa-facebook-f"></i>
+            <!-- <i class="fab fa-instagram-square" v-if ="i.social == 'ig'" ></i> -->
+            <!-- <i v-else-if="social_icons.social =='fb'" class="fab fa-facebook-f"></i>
           <i v-else-if="social_icons.social =='tw'" class="fab fa-twitter"></i>
           <i v-else-if ="social_icons.social == 'pt'" class="fab fa-pinterest-p"></i> -->
 
-           <img :src="'icons/' + i.icon" alt="">
-         </div>
-
+            <img :src="'icons/' + i.icon" alt="">
+          </div>
+      
 
         </div>
       </div>
 
-  </section>
-</footer>
-<script src="myscript.js" charset="utf-8"></script>  <!-- /FOOTER -->
+    </section>
+  </footer>
+  <script src="myscript.js" charset="utf-8"></script> <!-- /FOOTER -->
 </body>
 
 </html>
